--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.1"
+        "php": ">=5.1.*",
+        "laravel/framework": "5.2.*"
     },
     "autoload": {
         "psr-4": {
