--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.4*",
+        "php": ">=5.6.4",
         "laravel/framework": "5.2.*"
     },
     "autoload": {
