--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,6 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.2.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Devdojo\\Calculator\\": "src"
-        }
+        "php": ">=5.6.4"
     }
 }
