--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=5.6.4",
+        "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x|5.5.x"
     }
 }
