--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x|5.5.x"
-    }
+        "php": ">=5.4.0",
+        "illuminate/config": "~5.0",
+        "illuminate/support": "~5.0"
+      },
+      "require-dev": {
+        "phpunit/phpunit": "~4.0"
+      }
 }
