--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,5 @@
             "email": "support@dexbytes.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.4.0",
-        "illuminate/config": "~5.0",
-        "illuminate/support": "~5.0"
-      },
-      "require-dev": {
-        "phpunit/phpunit": "~4.0"
-      }
+    "minimum-stability": "dev"
 }
