--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,27 @@
 {
     "name": "dexbytes/calculator",
     "description": "This is a demo package for calculator",
+    "keywords": ["laravel", "calculator"],
+    "homepage": "",
     "license": "MIT",
     "authors": [
-        {
-            "name": "Dexbytes Technology",
-            "email": "support@dexbytes.com"
-        }
+      {
+        "name": "Dexbytes Technology",
+        "email": "support@dexbytes.com"
+      }
     ],
+    "require": {
+      "php": ">=5.4.0",
+      "illuminate/config": "~5.0",
+      "illuminate/support": "~5.0"
+    },
+    "require-dev": {
+      "phpunit/phpunit": "~4.0"
+    },
+    "autoload": {
+      "psr-4": {
+      "Devdojo\\Calculator\\": "src" 
+      }
+    },
     "minimum-stability": "dev"
-}
+  }
