--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,6 @@
       "Devdojo\\Calculator\\": "src" 
       }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
   }
