--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "Devdojo\\Calculator\\": "src" 
       }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
   }
