--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
         "Devdojo\\Calculator\\": "src" 
       }
     },
-    "minimum-stability": "dev"
+    "extra": {
+      "branch-alias": {
+        "dev-master": "2.0-dev"
+      }
+    }
   }
